# mobilenet_classifier

./: README.md  download_dataset.sh  pyproject.toml  requirement.txt  test.py  train.py
dlmodel/: README.md
