[tool.poetry]
name = "git version"
version = "0.1.0"
description = ""
authors = ["lpy <u0251077@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow-gpu = "1.14.0"
Keras = "2.2.4"
Pillow = "7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
